--- a/user_auth/templates/login.html
+++ b/user_auth/templates/login.html
@@ -51,7 +51,7 @@
                     <a class="nav-link" href="#" style="color: black;">Contact</a>
                   </li>
                   <li class="nav-item" style="padding-right: 59px;;">
-                    <button class="btn btn-warning" style="color: #0D5CAB;" type="submit">Register</button>
+                    <button class="btn btn-warning" style="width: 140px; height: 48px; color: #0D5CAB;" type="submit">Register</button>
                   </li>
                 </ul>
               </div>
@@ -61,6 +61,7 @@
       </nav>
     </section>
 
+    <!-- MAIN -->
     <section>
       <div class="container-fluid" style="height: 567px;">
         <div class="row justify-content-center">
