--- a/user_auth/templates/register.html
+++ b/user_auth/templates/register.html
@@ -1,5 +1,3 @@
-<h2>Register</h2>
-
 {% if error %}
   <p>{{ error }}</p>
 {% endif %}
@@ -12,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="../static/register.css">
     <script src="js/bootstrap.js"></script>
 
     <title>Register</title>
@@ -25,7 +23,7 @@
           <div class="row justify-content-center align-items-center">
             <div class="col col-2">
               <a class="navbar-brand" href="#">
-                <img src="img/Logo_kementerian_keuangan_republik_indonesia 1.png" alt="" width="55" height="51" class="d-inline-block align-text-top">
+                <img src="../static/img/Logo_kementerian_keuangan_republik_indonesia 1.png" alt="" width="55" height="51" class="d-inline-block align-text-top">
               </a>
             </div>
             <div class="col col-10" style="font-size: 20px; font-weight: 700; padding-left: 34px;">
@@ -125,7 +123,7 @@
         <div class="row d-flex justify-content-center px-5">
           <div class="col-md-12" style="height: 64px;"></div>
           <div class="col-md-2">
-            <img src="img/Logo_kementerian_keuangan_republik_indonesia 1.png" alt="" width="144" height="134">
+            <img src="../static/img/Logo_kementerian_keuangan_republik_indonesia 1.png" alt="" width="144" height="134">
           </div>
           <div class="col-md-6">
             <h3 class="text-white" style="font-size: 24px; font-weight: 700;">KEMENTERIAN KEUANGAN</h3>
