--- a/user_auth/templates/login.html
+++ b/user_auth/templates/login.html
@@ -10,54 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../static/login.css">
-    <script src="./js/bootstrap.js"></script>
+    <link rel="stylesheet" href="../static/css/login.css">
+    <script src="../static/js/bootstrap.js"></script>
 
     <title>Login</title>
   </head>
   <body>
     <!-- Navbar -->
-    <section>
-      <nav class="navbar navbar-expand-md navbar-light shadow-sm" style="background-color: #fff; height: 77px;">
-        <div class="container-fluid" style="padding-left: 49px;">
-          <div class="row justify-content-center align-items-center">
-            <div class="col col-2">
-              <a class="navbar-brand" href="#">
-                <img src="../static/img/Logo_kementerian_keuangan_republik_indonesia 1.png" alt="" width="55" height="51" class="d-inline-block align-text-top">
-              </a>
-            </div>
-            <div class="col col-10" style="font-size: 20px; font-weight: 700; padding-left: 34px;">
-              MONITORING AGENDA SETTING
-            </div>  
-          </div>
-          
-          <div class="ms-auto">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <div class="d-flex">
-                <ul class="navbar-nav me-auto">
-                  <li class="nav-item mx-auto">
-                    <a class="nav-link" href="#" style="color: black;">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: black;">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#" style="color: black;">Contact</a>
-                  </li>
-                  <li class="nav-item" style="padding-right: 59px;;">
-                    <button class="btn btn-warning" style="width: 140px; height: 48px; color: #0D5CAB;" type="submit">Register</button>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </section>
+    {% block navbar %}
+      {% include './items/navbar_guest.html' %}
+    {% endblock %}
 
     <!-- MAIN -->
     <section>
