--- a/user_auth/templates/login.html
+++ b/user_auth/templates/login.html
@@ -48,10 +48,10 @@
                           <input type="password" class="form-control" style="gap: 8px; width: 388px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="pass" name="password" placeholder="at least 8 characters">
                         </div>
                         <div class="text-center">
-                          <a href="#" style="font-family: roboto; font-size: 14px; color: black;">forgot password?</a>
+                          <a href="#" style="font-size: 14px; color: black;">forgot password?</a>
                         </div>
                         <div class="d-flex justify-content-center">
-                          <button class="btn btn-primary mt-3" style="width: 140px; height: 48px; background: #EFB829; color: #0D5CAB; border-style: none;" type="submit" name="login">Login</button>
+                          <button class="btn-option" type="submit" name="login">Login</button>
                         </div>                                      
                       </form>
                     </div>
