--- a/user_auth/templates/register.html
+++ b/user_auth/templates/register.html
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../static/css/register.css">
-    <script src="../static/css/register.css"></script>
+    <script src="../static/js/bootstrap.js"></script>
 
     <title>Register</title>
   </head>
@@ -38,6 +38,7 @@
                   <div class="col-md-12">
                     <div class="d-flex justify-content-center align-items-center">
                       <form method="POST">
+                        {% csrf_token %}
                         <div class="mb-3">
                           <label for="name" class="form-label" style="font-size: 16px; font-weight: 400;">Full Name</label>
                           <input type="name" class="form-control justify-content-center" style="gap: 8px; width: 388px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="name" name="name" placeholder="Bambang Multani">
@@ -49,9 +50,12 @@
                         <div class="form-group mb-3">
                           <label for="role" class="form-label" style="font-size: 16px; font-weight: 400;">Role</label>
                           <select class="form-control justify-content-center" style="gap: 8px; width: 388px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="role" name="role" placeholder="12345678">
+                            {% for choice in role_choices %}
                             <option value="" selected disabled hidden>Choose Role</option>
-                            <option>Petugas Agenda Setting</option>
-                            <option>Petugas Monitor</option>
+                            <option value="{{ choice.0 }}">{{ choice.1 }}</option>
+                            {% endfor %}
+                            {% comment %} <option>Petugas Agenda Setting</option>
+                            <option>Petugas Monitor</option> {% endcomment %}
                           </select>
                         </div>
                         <div class="mb-3">
@@ -63,7 +67,7 @@
                           <input type="password" class="form-control" style="gap: 8px; width: 388px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="pass" name="password" placeholder="at least 8 characters">
                         </div>
                         <div class="d-flex justify-content-center">
-                          <button class="btn btn-primary mt-3" style="width: 140px; height: 48px; background: #EFB829; color: #0D5CAB; border-style: none;" type="submit" name="login">Register</button>
+                          <button class="btn-option" style="width: 140px; height: 48px; background: #EFB829; color: #0D5CAB; border-style: none;" type="submit" name="login">Register</button>
                         </div>                                      
                       </form>
                     </div>
