--- a/user_auth/static/css/register.css
+++ b/user_auth/static/css/register.css
@@ -4086,6 +4086,8 @@ textarea.form-control-lg {
   .navbar-expand-md {
     flex-wrap: nowrap;
     justify-content: flex-start;
+    background-color: #fff;
+    height: 77px;
   }
   .navbar-expand-md .navbar-nav {
     flex-direction: row;
@@ -4219,7 +4221,7 @@ textarea.form-control-lg {
   color: rgba(0, 0, 0, 0.9);
 }
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.55);
+  color: black;
 }
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
   color: rgba(0, 0, 0, 0.7);
