--- a/user_auth/templates/items/navbar_guest.html
+++ b/user_auth/templates/items/navbar_guest.html
@@ -4,7 +4,7 @@
     <div class="container-fluid" style="padding-left: 49px;">
       <div class="row justify-content-center align-items-center">
         <div class="col col-2">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="{% url 'home' %}">
             <img src="../static/img/Logo_kementerian_keuangan_republik_indonesia 1.png" alt="" width="55" height="51" class="d-inline-block align-text-top">
           </a>
         </div>
@@ -22,7 +22,7 @@
           <div class="d-flex">
             <ul class="navbar-nav me-auto">
               <li class="nav-item mx-auto">
-                <a class="nav-link" href="{% url 'dashboard' %}">Home</a>
+                <a class="nav-link" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
@@ -33,7 +33,7 @@
               <li class="nav-item" style="padding-right: 59px;">
                 {% if request.path == '/login/' %}
                   <a class="btn-option" href="{% url 'register' %}" type="submit">Register</a>
-                {% elif request.path == '/register/' %}
+                {% elif request.path == '/register/' or '/' %}
                   <a class="btn-option" href="{% url 'login' %}" type="submit">Login</a>
                 {% endif %}
               </li>
