--- a/user_auth/templates/login.html
+++ b/user_auth/templates/login.html
@@ -14,6 +14,7 @@
     <script src="../static/js/bootstrap.js"></script>
 
     <title>Login</title>
+    <link rel="icon" type="image/x-icon" href="../static/img/Logo_kementerian_keuangan_republik_indonesia 1.png">
   </head>
   <body>
     <!-- Navbar -->
