--- a/user_auth/templates/login.html
+++ b/user_auth/templates/login.html
@@ -45,8 +45,8 @@
                           <input type="email" class="form-control justify-content-center" style="gap: 8px; width: 388px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="email" name="email" placeholder="example@email.com">
                         </div>
                         <div class="mb-3">
-                          <label for="pass" class="form-label" style="font-size: 16px; font-weight: 400;">Password</label>
-                          <input type="password" class="form-control" style="gap: 8px; width: 388px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="pass" name="password" placeholder="at least 8 characters">
+                          <label for="password" class="form-label" style="font-size: 16px; font-weight: 400;">Password</label>
+                          <input type="password" class="form-control" style="gap: 8px; width: 388px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="password" name="password" placeholder="at least 8 characters">
                         </div>
                         <div class="text-center">
                           <a href="#" style="font-size: 14px; color: black;">forgot password?</a>
