--- a/user_auth/templates/login.html
+++ b/user_auth/templates/login.html
@@ -1,7 +1,3 @@
-{% if error %}
-  <p>{{ error }}</p>
-{% endif %}
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -33,7 +29,7 @@
             <div class="card mx-auto" style="width: auto; max-width: 554px; height: 428px; border-radius: 12px; background-color: #C7EEFF; border-style: none;">
               <div class="card-body">
                 <div class="row">
-                  <div class="col-md-12" style="padding-top: 36px; padding-bottom: 35px;">
+                  <div class="col-md-12" style="padding-top: 36px; padding-bottom: 25px;">
                     <h1 class="card-title text-center" style="font-size: 32px; font-weight: 700;">LOGIN</h1>
                   </div>
                   <div class="col-md-12">
@@ -49,11 +45,16 @@
                           <input type="password" class="form-control" style="gap: 8px; width: 388px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="password" name="password" placeholder="at least 8 characters">
                         </div>
                         <div class="text-center">
-                          <a href="#" style="font-size: 14px; color: black;">forgot password?</a>
+                          <a href="#" style="font-size: 14px; color: black; text-decoration: none;">forgot password?</a>
                         </div>
-                        <div class="d-flex justify-content-center">
+                        <div class="d-flex justify-content-center pt-2">
                           <button class="btn-option" type="submit" name="login">Login</button>
                         </div>                                      
+                        {% if error %}
+                          <div class="text-center pt-2">
+                            <p style="color: red;">{{ error }}</p>
+                          </div>
+                        {% endif %}
                       </form>
                     </div>
                   </div>
