--- a/user_auth/templates/register.html
+++ b/user_auth/templates/register.html
@@ -1,7 +1,3 @@
-{% if error %}
-  <p>{{ error }}</p>
-{% endif %}
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -33,7 +29,7 @@
             <div class="card mx-auto" style="width: auto; max-width: 554px; height: 680px; border-radius: 12px; background-color: #C7EEFF; border-style: none;">
               <div class="card-body">
                 <div class="row">
-                  <div class="col-md-12" style="padding-top: 36px; padding-bottom: 30px;">
+                  <div class="col-md-12" style="padding-top: 36px; padding-bottom: 25px;">
                     <h1 class="card-title text-center" style="font-size: 32px; font-weight: 700;">REGISTER</h1>
                   </div>
                   <div class="col-md-12">
@@ -69,7 +65,12 @@
                         </div>
                         <div class="d-flex justify-content-center">
                           <button class="btn-option" style="width: 140px; height: 48px; background: #EFB829; color: #0D5CAB; border-style: none;" type="submit" name="register">Register</button>
-                        </div>                                      
+                        </div>                 
+                        {% if error %}
+                          <div class="text-center pt-2">
+                            <p style="color: red;">{{ error }}</p>
+                          </div>  
+                        {% endif %}                     
                       </form>
                     </div>
                   </div>
