--- a/user_auth/templates/items/navbar.html
+++ b/user_auth/templates/items/navbar.html
@@ -29,7 +29,7 @@
               </li>
               {% if role == 'admin' %}
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Roles</a>
+                  <a class="nav-link" href="{% url 'role' %}">Roles</a>
                 </li>
               {% endif %}
               {% if role != 'petugas_monitor' %}
