--- a/user_auth/templates/login.html
+++ b/user_auth/templates/login.html
@@ -45,7 +45,7 @@
                           <input type="password" class="form-control" style="gap: 8px; width: 388px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="password" name="password" placeholder="at least 8 characters">
                         </div>
                         <div class="text-center">
-                          <a href="#" style="font-size: 14px; color: black; text-decoration: none;">forgot password?</a>
+                          <a href="#" style="font-size: 14px; color: black; text-decoration: none;">forget password?</a>
                         </div>
                         <div class="d-flex justify-content-center pt-2">
                           <button class="btn-option" type="submit" name="login">Login</button>
