--- a/user_auth/templates/admin/role.html
+++ b/user_auth/templates/admin/role.html
@@ -57,17 +57,20 @@
                     <form method="POST">
                       {% csrf_token %}
                       <div class="form-group">
+                        <div class="dropdown"> 
                         {% if user.role == 'admin' %}
-                          <select class="form-control" id="role" name="role" disabled>
-                        {% else %}
-                          <select class="form-select" id="role" name="role">
+                          <button class="btn btn-info" disabled>admin</button>
+                          {% else %}
+                          <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            {{ user.role }}
+                          </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                              {% for choice in role_choices %}
+                              <li><a class="dropdown-item" href="http://127.0.0.1:8000/role/update/{{ user.id }}/{{ choice.0 }}">{{ choice.1 }}</a></li>
+                              {% endfor %}
+                            </ul>
+                          </div>
                         {% endif %}
-                        {% for choice in role_choices %}
-                          <option value="" selected disabled hidden>{{ user.role }}</option>
-                          <option value="" selected disabled hidden>{{ user.role }}</option>
-                          <option value="{{ choice.0 }}">{{ choice.1 }}</option>
-                        {% endfor %}
-                          </select>
                       </div>
                     </form>
                   </td>
@@ -75,7 +78,7 @@
                     {% if not user.role == 'admin' %}
 
                       {% if user.verification == 'true' %}
-                      <button type="button" class="btn btn-secondary" disabled>Accepted</button>
+                      <button type="button" class="btn btn-success" disabled>Accepted</button>
                       {% else %}
                       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Accept</button>
                       <!-- Modal Verification -->
