--- a/user_auth/templates/admin/role.html
+++ b/user_auth/templates/admin/role.html
@@ -42,6 +42,7 @@
                   <th scope="col">NIP</th>
                   <th scope="col">Email</th>
                   <th scope="col">Role</th>
+                  <th scope="col">Verification</th>
                   <th scope="col"></th>
                 </tr>
               </thead>
@@ -93,7 +94,7 @@
                               are you sure to activate this account?
                             </div>
                             <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                              <button type="button" class="btn btn-light" data-bs-dismiss="modal">Close</button>
                               <form method="POST" action="{% url 'verification' %}">
                                 {% csrf_token %}
                                 <input type="hidden" value="{{ user.id }}" name="id" name="id">
@@ -104,7 +105,8 @@
                         </div>
                       </div>
                       {% endif %}
-
+                  </td>
+                  <td>    
                       <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">Delete</button>
                       <!-- ModalDelete -->
                       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -118,7 +120,7 @@
                               Are you sure you want to delete this account?
                             </div>
                             <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                              <button type="button" class="btn btn-light" data-bs-dismiss="modal">Close</button>
                               <form method="POST" action="{% url 'delete' %}">
                                 {% csrf_token %}
                                 <input type="hidden" value="{{ user.id }}" name="id" name="id">
@@ -128,8 +130,10 @@
                           </div>
                         </div>
                       </div>
+                    </td>
+                    {% else %}
+                    <td></td>
                     {% endif %}     
-                  </td>
                 </tr>
                 {% endfor %}
               </tbody>
