--- a/user_auth/static/css/role.css
+++ b/user_auth/static/css/role.css
@@ -3013,12 +3013,12 @@ textarea.form-control-lg {
 }
 .btn-secondary:hover {
   color: #fff;
-  background-color: #EFB829;
+  background-color: #565e64;
   border-color: #565e64;
 }
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
   color: black;
-  background-color: #EFB829;
+  background-color: #565e64;
   border-color: #565e64;
   box-shadow: 0 0 0 0.25rem rgba(130, 138, 145, 0.5);
 }
@@ -3094,6 +3094,7 @@ textarea.form-control-lg {
   color: #000;
   background-color: #0dcaf0;
   border-color: #0dcaf0;
+  opacity: unset;
 }
 
 .btn-warning {
