--- a/user_auth/templates/dashboard.html
+++ b/user_auth/templates/dashboard.html
@@ -1,30 +1,10 @@
-{% if error %}
-  <p>{{ error }}</p>
-{% endif %}
+{% extends './items/base.html' %}
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% block css %}../static/css/dashboard.css{% endblock %}
+{% block title %}dashboard{% endblock %}
+{% block navbar %}{% include './items/navbar.html' %}{% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../static/css/dashboard.css">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="../static/js/bootstrap.js"></script>
-
-    <title>Dashboard</title>
-    <link rel="icon" type="image/x-icon" href="../static/img/Logo_kementerian_keuangan_republik_indonesia 1.png">
-  </head>
-
-  <body>
-  <!-- Navbar -->
-  {% block navbar %}
-    {% include './items/navbar.html' %}
-  {% endblock %}
-  
-
+{% block content %}
   <!-- MAIN -->
   <section>
     <div class="container-fluid" style="height: 568px;">
@@ -66,15 +46,4 @@
     </div>
   </section>  
 
-  <!-- footer -->
-  {% block footer %}
-    {% include './items/footer.html' %}
-  {% endblock %}
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% endblock %}
