--- a/user_auth/templates/dashboard.html
+++ b/user_auth/templates/dashboard.html
@@ -1,7 +1,7 @@
 {% extends './items/base.html' %}
 
 {% block css %}../static/css/dashboard.css{% endblock %}
-{% block title %}dashboard{% endblock %}
+{% block title %}Dashboard{% endblock %}
 {% block navbar %}{% include './items/navbar.html' %}{% endblock %}
 
 {% block content %}
