--- a/user_profile/templates/profile.html
+++ b/user_profile/templates/profile.html
@@ -2,6 +2,8 @@
   <p>{{ error }}</p>
 {% endif %}
 
+{% load static %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -23,33 +25,42 @@
     {% include './items/navbar.html' %}
   {% endblock %}
   
-
+  {% if user.is_authenticated %}
+  <p> Welcome, {{profile.user.full_name}} </p>
+  {% else %}
+  <p> Who are you kids </p>
+  {% endif %}
   <!-- MAIN -->
   <div class="container-fluid" style="height: 900px;">
     <div class="d-flex justify-content-center" style="padding-top: 59px; padding-bottom: 4px;">
-      <img src="../static/img/profile_picture.png" alt="" style="width: 120px; height: 120px; border-radius: 50%;">
-    </div>
-    <div class="d-flex justify-content-center" style="padding-bottom: 29px;">
-      <a href="#" style="font-size: 15px; color: black; text-decoration: unset; ">change photo</a>
+      {% if profile.profile_picture %}
+        <img src="{{ profile.profile_picture.url }}" alt="Profile Picture" style="margin-bottom: 29px; object-fit:cover;width: 150px; height: 150px; border-radius: 50%; display: block;">
+      {% else %}
+        <img src="{% static 'img/default_profile.png' %}" alt="Default Profile Picture" style="width: 120px; height: 120px; border-radius: 50%;">
+      {% endif %}
     </div>
     <div class="d-flex justify-content-center align-items-center">
-      <form method="POST">
+      <form method="POST" enctype="multipart/form-data" action="{% url 'update_profile' %}">
         {% csrf_token %}
+        <div class="d-flex justify-content-center">
+          <label for="profile_picture" class="form-label"></label>
+          <input type="file" id="profile_picture" name="profile_picture">
+        </div>
         <div class="mb-3">
           <label for="full_name" class="form-label">Full Name</label>
-          <input type="full_name" class="form-control" style="gap: 8px; width: 796px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="full_name" name="full_name" value="{{ full_name }}" required>
+          <input type="full_name" class="form-control" style="gap: 8px; width: 796px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="full_name" name="full_name" value="{{ profile.user.full_name }}" required>
         </div>
         <div class="mb-3">
           <label for="nip" class="form-label">NIP</label>
-          <input type="nip" class="form-control" style="gap: 8px; width: 796px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="nip" name="nip" value="{{ nip }}" required>
+          <input type="nip" class="form-control" style="gap: 8px; width: 796px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="nip" name="nip" value="{{ profile.user.nip }}" required>
         </div>
         <div class="form-group mb-3">
-          <label for="role" class="form-label">Role</label>
-          <input type="role" class="form-control" style="gap: 8px; width: 796px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="role" name="role" value="{{ role }}" readonly>
+          <label for="roles" class="form-label">Role</label>
+          <input type="roles" class="form-control" style="gap: 8px; width: 796px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="roles" name="roles" value="{{ profile.user.roles }}" readonly>
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" style="gap: 8px; width: 796px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="email" name="email" value="{{ email }}" readonly>
+          <input type="email" class="form-control" style="gap: 8px; width: 796px; height: 48px; border-radius: 12px; border: 1px solid #D4D7E3;" id="email" name="email" value="{{ profile.user.email }}" readonly>
         </div>
         <div class="mb-3">
           <label for="password" class="form-label">Password</label>
@@ -63,8 +74,10 @@
         </div>
       </form>
     </div>
-  </div>
+    
 
+  </div>
+  
   <!-- footer -->
   {% block footer %}
     {% include './items/footer.html' %}
