--- a/statistic/templates/statistic.html
+++ b/statistic/templates/statistic.html
@@ -68,7 +68,7 @@
         <!-- Mid Space Between Colomn-->
         <div class="col-md-auto"></div>
         
-        <!-- Right Coloumn -->
+        <!-- Middle Coloumn -->
         <div class="col-md-3" style="background-color: #C7EEFF; height: 323px; border-radius: 20px;">
           <div style="padding: 30px 24px 30px 24px;">
             <p style="margin-bottom: auto; font-family: Inter; font-size: 18px;">Statistic</p>
@@ -90,6 +90,33 @@
           </div>
         </div>  
       </div>
+
+      <!-- Right Coloumn -->
+      <div class="col-md-3" style="background-color: #C7EEFF; height: 323px; border-radius: 20px;">
+        <div style="padding: 30px 24px 30px 24px;">
+          <p style="margin-bottom: auto; font-family: Inter; font-size: 18px;">Statistic</p>
+          <h2 style="color: #0D5CAB; font-family: Inter; font-size: 22px; font-weight: 700; padding-bottom: 33px;">Agenda</h2>
+          <div class="d-flex justify-content-between">
+            <h3 style="font-size: 14px;">Jumlah Topik</h3>
+            <h3 style="font-size: 14px;">382</h3>
+          </div>
+          <div class="progress mb-3">
+            <div class="progress-bar" role="progressbar" style="width: 63.1%;" aria-valuenow="631" aria-valuemin="0" aria-valuemax="1000"></div>
+          </div>
+          <div class="d-flex justify-content-between">
+            <h3 style="font-size: 14px;">81</h3>
+          </div>
+          <div class="d-flex justify-content-between">
+            <h3 style="font-size: 14px;">Jumlah Sub Pesan Kunci</h3>
+            <h3 style="font-size: 14px;">217</h3>
+          </div>
+          <div class="progress mb-3">
+            <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="300" aria-valuemin="0" aria-valuemax="1000"></div>
+          </div>
+        </div>
+      </div>  
+    </div>
+    
       
       <!-- Button -->
       <div class="d-flex justify-content-center" style="padding: 40px 0px 20px 0px;">
