--- a/user_auth/templates/dashboard.html
+++ b/user_auth/templates/dashboard.html
@@ -40,19 +40,19 @@
                   Pilih Unit Eselon 1
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">All</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">Kemenkeu</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">Setjen</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">DJA</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">DJP</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">DJPPR</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">DJPB</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">DJKN</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">Itjen</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">DJBC</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">BKF</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">BPPK</a></li>
-                  <li><a class="dropdown-item" href="{% url 'instagram_posts_by_ue1'%}">SMV</a></li>
+                  <li><a class="dropdown-item" href="#">All</a></li>
+                  <li><a class="dropdown-item" href="#">Kemenkeu</a></li>
+                  <li><a class="dropdown-item" href="#">Setjen</a>li>
+                  <li><a class="dropdown-item" href="#">DJA</a></ l>
+                  <li><a class="dropdown-item" href="#">DJP</a></li>
+                  <li><a class="dropdown-item" href="#">DJPPR</a></li>
+                  <li><a class="dropdown-item" href="#">DJPB</a></li>
+                  <li><a class="dropdown-item" href="#">DJKN</a></li>
+                  <li><a class="dropdown-item" href="#">Itjen</a></li>
+                  <li><a class="dropdown-item" href="#">DJBC</a></li>
+                  <li><a class="dropdown-item" href="#">BKF</a></li>
+                  <li><a class="dropdown-item" href="#">BPPK</a></li>
+                  <li><a class="dropdown-item" href="#">SMV</a></li>
                 </ul>
               </div>
             </div>
