--- a/user_auth/templates/register.html
+++ b/user_auth/templates/register.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../static/css/register.css">
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
     <script src="../static/js/bootstrap.js"></script>
 
     <title>Register</title>
