--- a/similarity_checker/templates/similarity-checker.html
+++ b/similarity_checker/templates/similarity-checker.html
@@ -1,3 +1,7 @@
+{% if error %}
+  <p>{{ error }}</p>
+{% endif %}
+
 {% load static %}
 
 <!doctype html>
@@ -8,12 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'css/similarity-checker.css' %}">
+    <link rel="stylesheet" href="../static/css/similarity-checker.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="../static/js/bootstrap.js"></script>
 
     <title>Similarity Checker</title>
-    <link rel="icon" type="image/x-icon" href="{% static 'img/Logo_kementerian_keuangan_republik_indonesia 1.png' %}">
+    <link rel="icon" type="image/x-icon" href="../static/img/Logo_kementerian_keuangan_republik_indonesia 1.png">
   </head>
 
   <body>
@@ -21,11 +25,19 @@
   {% block navbar %}
     {% include './items/navbar.html' %}
   {% endblock %}
-  
+
+
+  {% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+      <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+
   <!-- MAIN -->
   <section>
-    <div class="container-fluid">
-    <div class="container-fluid" style="height: 843px;">
+    <div class="container-fluid" style="height: 1050px;">
       <div class="row d-flex justify-content-center">
 
         <!-- Title -->
@@ -33,30 +45,92 @@
           <h1 style="font-size: 32px; font-weight: 700; padding-top: 53px; padding-bottom: 39px;">VERIFIKASI MANUAL</h1>
         </div>
 
-        <!-- Table for InstagramCaptions -->
-        <div class="col-md-10" style="background-color: #C7EEFF; height: 588px; border-radius: 12px;">
-          <table class="table table-bordered">
-            <thead>
-              <tr>
-                <th>Account</th>
-                <th>Agenda</th>
-                <th>Caption</th>
-                <th>Posted Date Time</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for caption in captions %}
-                <tr>
-                  <td>{{ caption.account }}</td>
-                  <td>{{ caption.agenda }}</td>
-                  <td>{{ caption.caption }}</td>
-                  <td>{{ caption.posted_date_time }}</td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+        <!-- Form for Manual Verification -->
+        <div class="col-md-10" style="background-color: #C7EEFF; height: 800px; border-radius: 12px;">
+          <div style="padding: 20px 63px 0px 63px;">
+            <form method="POST">
+              {% csrf_token %}
+              <div class="row">
+                <div class="col-6">
+                  <label for="ue1" class="form-label">Unit Eselon 1: </label>
+                  <select class="form-select" name="ue1" id="ue1" required>
+                    <option selected disabled hidden>Select Unit Eselon 1</option>
+                    <option value="Kemenkeu">Kemenkeu</option>
+                    <option value="Setjen">Setjen</option>
+                    <option value="DJA">DJA</option>
+                    <option value="DJP">DJP</option>
+                    <option value="DJPPR">DJPPR</option>
+                    <option value="DJPB">DJPB</option>
+                    <option value="DJKN">DJKN</option>
+                    <option value="DJBK">DJBK</option>
+                    <option value="Itjen">Itjen</option>
+                    <option value="DJBC">DJBC</option>
+                    <option value="BKF">BKF</option>
+                    <option value="BPPK">BPPK</option>
+                    <option value="SMV">SMV</option>
+                  </select>
+                </div>
+                <div class="col-6">
+                  <label for="social_media" class="form-label">Sosial Media: </label>
+                  <select class="form-select" name="social_media" id="social_media" required>
+                    <option value="" selected disabled hidden>Select Social Media</option>
+                    <option value="Facebook">Facebook</option>
+                    <option value="Instagram">Instagram</option>
+                    <option value="Linkedin">Linkedin</option>
+                    <option value="Tiktok">Tiktok</option>
+                    <option value="Twitter">Twitter</option>
+                    <option value="YouTube">YouTube</option>
+                  </select>
+                </div>
+              </div>
+              <div class="pb-3">
+                <label for="account_url" class="form-label">Link Account: </label>
+                <input class="form-control" id="account_url" name="account_url" rows="4" required>
+              </div>            
+              <div class="pb-3">
+                <label for="post_url" class="form-label">Link Post: </label>
+                <input class="form-control" id="post_url" name="post_url" rows="4" required>
+              </div>            
+              <div class="pb-3">
+                <label for="captions" class="form-label">Caption: </label>
+                <textarea class="form-control" id="captions" rows="4" name="captions" required></textarea>
+              </div>
+              <div class="pb-3">
+                <label for="topik" class="form-label">Topik: </label>
+                <input type="text" class="form-control" id="topik" name="topik" required>
+              </div>
+              <div class="pb-3">
+                <label for="pesan_kunci" class="form-label">Pesan Kunci: </label>
+                <input type="text" class="form-control" id="pesan_kunci" name="pesan_kunci" placeholder="ASEAN, DHE" required>
+              </div>
+              <div class="pb-3">
+                <label for="sub_pesan_kunci" class="form-label">Sub Pesan Kunci</label>
+                <input type="text" class="form-control" id="sub_pesan_kunci" name="sub_pesan_kunci" placeholder="Ekspor, KMK " required>
+              </div>
+              <div class="row">
+                <div class="col-6">
+                  <label for="kesesuaian" class="form-label">Kesesuaian</label>
+                  <select class="form-select" name="kesesuaian" id="kesesuaian" required>
+                    <option selected disabled hidden>Sesuai / Tidak Sesuai</option>
+                    <option value="Sesuai">Sesuai</option>
+                    <option value="Tidak Sesuai">Tidak Sesuai</option>
+                  </div>
+                  </select>
+                </div>
+                <div class="col-6"Tidak Sesuai
+                  <label for="catatan" class="form-label">Catatan</label>
+                  <textarea class="form-control" id="catatan" name="catatan" rows="2"></textarea>
+                </div>
+              </div>
+          </div>
         </div>
-      </div>
+
+        <!-- Submit Form Button-->
+        <div class="col-md-12 d-flex justify-content-center" style="padding-top: 18px;">
+          <button class="btn-option" style="width: 287px; height: 48px; background: #EFB829; color: #0D5CAB; border-style: none;" type="submit" name="submit">Save</button>
+        </div>
+          </form>
+          
     </div>
   </section>
 
