--- a/statistic/static/css/db_statistic.css
+++ b/statistic/static/css/db_statistic.css
@@ -5,6 +5,8 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url('https://fonts.googleapis.com/css2?family=Jost&family=Open+Sans:wght@400;500&family=Poppins:wght@300&display=swap');
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -55,7 +57,7 @@
   width: 140px; 
   height: 48px;
   font-weight: 400;
-  font-family: var(--bs-font-sans-serif);
+  font-family: 'Open Sans', sans-serif;
   border-radius: 5px;
   border-style: none;
   text-decoration: none;
@@ -2191,7 +2193,7 @@ progress {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: black;
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
@@ -2231,7 +2233,7 @@ progress {
   opacity: 1;
 }
 .form-control:disabled, .form-control[readonly] {
-  background-color: #e9ecef;
+  background-color: #fff;
   opacity: 1;
 }
 .form-control::file-selector-button {
@@ -4799,7 +4801,7 @@ textarea.form-control-lg {
   height: 1rem;
   overflow: hidden;
   font-size: 0.75rem;
-  background-color: #e9ecef;
+  background-color: #fff;
   border-radius: 0.25rem;
 }
 
@@ -4811,7 +4813,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #0d6efd;
+  background-color: #EFB829;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -10870,4 +10872,5 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-/*# sourceMappingURL=bootstrap.css.map *
+
+/*# sourceMappingURL=bootstrap.css.map */
