--- a/statistic/templates/statistic.html
+++ b/statistic/templates/statistic.html
@@ -43,10 +43,10 @@
             <h2 style="color: #0D5CAB; font-family: Inter; font-size: 22px; font-weight: 700; padding-bottom: 33px;">Social Media Post Agenda</h2>
             <div class="d-flex justify-content-between">
               <h3 style="font-size: 14px;">Jumlah Agenda Setting</h3>
-              <h3 style="font-size: 14px;">129</h3>
+              <h3 style="font-size: 14px;">{{ total_agenda_setting }}</h3>
             </div>
             <div class="progress mb-3">
-              <div class="progress-bar" role="progressbar" style="width: 12.9%;" aria-valuenow="129" aria-valuemin="0" aria-valuemax="1000"></div>
+              <div class="progress-bar" role="progressbar" style="width: {{ total_agenda_setting }}%;" aria-valuenow="{{ total_agenda_setting }}" aria-valuemin="0" aria-valuemax="1000"></div>
             </div>
             <div class="d-flex justify-content-between">
               <h3 style="font-size: 14px;">Jumlah Postingan</h3>
@@ -89,7 +89,9 @@
             </div>
           </div>
         </div>  
-      </div>
+
+              <!-- Mid Space Between Colomn-->
+      <div class="col-md-auto"></div>
 
       <!-- Right Coloumn -->
       <div class="col-md-3" style="background-color: #C7EEFF; height: 323px; border-radius: 20px;">
@@ -98,32 +100,33 @@
           <h2 style="color: #0D5CAB; font-family: Inter; font-size: 22px; font-weight: 700; padding-bottom: 33px;">Agenda</h2>
           <div class="d-flex justify-content-between">
             <h3 style="font-size: 14px;">Jumlah Topik</h3>
-            <h3 style="font-size: 14px;">382</h3>
+            <h3 style="font-size: 14px;">{{ total_topik_agenda }}</h3>
           </div>
           <div class="progress mb-3">
-            <div class="progress-bar" role="progressbar" style="width: 63.1%;" aria-valuenow="631" aria-valuemin="0" aria-valuemax="1000"></div>
+            <div class="progress-bar" role="progressbar" style="width: {{ total_topik_agenda }}%;" aria-valuenow="{{ total_topik_agenda }}" aria-valuemin="0" aria-valuemax="1000"></div>
           </div>
           <div class="d-flex justify-content-between">
-            <h3 style="font-size: 14px;">81</h3>
+            <h3 style="font-size: 14px;">Jumlah Pesan Kunci</h3>
+            <h3 style="font-size: 14px;">{{ total_pesan_kunci_words }}</h3>
+          </div>
+          <div class="progress mb-3">
+            <div class="progress-bar" role="progressbar" style="width: {{ total_pesan_kunci_words }}%;" aria-valuenow="{{ total_pesan_kunci_words }}" aria-valuemin="0" aria-valuemax="1000"></div>
           </div>
           <div class="d-flex justify-content-between">
             <h3 style="font-size: 14px;">Jumlah Sub Pesan Kunci</h3>
-            <h3 style="font-size: 14px;">217</h3>
-          </div>
+            <h3 style="font-size: 14px;">{{ total_sub_pesan_kunci_words }}</h3>
+            </div>
           <div class="progress mb-3">
-            <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="300" aria-valuemin="0" aria-valuemax="1000"></div>
+            <div class="progress-bar" role="progressbar" style="width: {{ total_sub_pesan_kunci_words }}%;" aria-valuenow="{{ total_sub_pesan_kunci_words }}" aria-valuemin="0" aria-valuemax="1000"></div>
           </div>
         </div>
       </div>  
     </div>
-    
-      
-      <!-- Button -->
-      <div class="d-flex justify-content-center" style="padding: 40px 0px 20px 0px;">
-        <a class="btn-option" style="width: 287px;" href="#" type="submit">Database Hasil Olahan</a>
-      </div>
-  
+    <!-- Button -->
+    <div class="d-flex justify-content-center" style="padding: 40px 0px 20px 0px;">
+      <a class="btn-option" style="width: 287px;" href="{% url 'database' %}" type="submit">Database Statistik</a>
     </div>
+  </div>
   </section>
 
   <!-- footer -->
