refactor: change some ui

--- a/similarity_checker/templates/similarity-checker.html
+++ b/similarity_checker/templates/similarity-checker.html
@@ -101,15 +101,15 @@
               </div>
               <div class="pb-3">
                 <label for="pesan_kunci" class="form-label">Pesan Kunci: </label>
-                <input type="text" class="form-control" id="pesan_kunci" name="pesan_kunci" placeholder="ASEAN, DHE" required>
+                <input type="text" class="form-control" id="pesan_kunci" name="pesan_kunci" placeholder="Pesan1, Pesan2" required>
               </div>
               <div class="pb-3">
-                <label for="sub_pesan_kunci" class="form-label">Sub Pesan Kunci</label>
-                <input type="text" class="form-control" id="sub_pesan_kunci" name="sub_pesan_kunci" placeholder="Ekspor, KMK " required>
+                <label for="sub_pesan_kunci" class="form-label">Sub Pesan Kunci: </label>
+                <input type="text" class="form-control" id="sub_pesan_kunci" name="sub_pesan_kunci" placeholder="SubPesan1, SubPesan2" required>
               </div>
               <div class="row">
                 <div class="col-6">
-                  <label for="kesesuaian" class="form-label">Kesesuaian</label>
+                  <label for="kesesuaian" class="form-label">Kesesuaia: </label>
                   <select class="form-select" name="kesesuaian" id="kesesuaian" required>
                     <option selected disabled hidden>Sesuai / Tidak Sesuai</option>
                     <option value="Sesuai">Sesuai</option>
