fix: fix objects

--- a/socmed_data/templates/instagram/instagram_detail_api.html
+++ b/socmed_data/templates/instagram/instagram_detail_api.html
@@ -39,9 +39,7 @@
             </ul>
             <li>Captions:</li>
             <ul>
-                {% for caption in data.captions %}
-                    <li>{{ caption }}</li>
-                {% endfor %}
+                <li>{{ data.captions }}</li>
             </ul>
             <br>
         {% endfor %}
