--- a/socmed_data/templates/instagram/instagram_detail_webscrap.html
+++ b/socmed_data/templates/instagram/instagram_detail_webscrap.html
@@ -4,7 +4,7 @@
     <title>Instagram Post Information</title>
 </head>
 <body>
-    <h1>Instagram Post Information</h1>
+    <h1>Instagram Post Information (Web Scrapping)</h1>
     <p>UE1: {{ ue1 }}</p>
     <p>Agenda Start: {{ agenda_start }}</p>
     <p>Agenda End: {{ agenda_end }}</p>
